# clog

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Changelog.md  Readme.md
.github/workflows/: branches.yml  release.yml
src/: changelog.rs  git.rs  lib.rs  main.rs  pyproject.poetry.toml.example  python.rs  rust.rs  semver.rs  test_support.rs
src/static/: .gitconfig.template  .prepare-commit-msg.template
tests/: integration.rs
tests/snapshots/: integration__assert_changelog-11.snap  integration__assert_changelog-14.snap  integration__assert_changelog-17.snap  integration__assert_changelog-4.snap  integration__assert_changelog-5.snap  integration__assert_changelog-6.snap  integration__assert_changelog-7.snap  integration__assert_changelog-8.snap
