[package]
name = "clog"
version = "0.3.0"
edition = "2021"
default-run = "clog"

[features]
test-support = []

[[bin]]
name = "clog"
path = "src/main.rs"

[[bin]]
name = "mkrepo"
path = "src/bin/mkrepo.rs"
required-features = ["test-support"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
fs_extra = "1.3.0"
git2 = { version = "0.20.2",  default-features = false }
inquire = "0.7.5"
itertools = "0.14.0"
names = { version = "0.14.0", default-features = false }
once_cell = "1.21.3"
regex = "1.11.2"
tempfile = "3.21.0"
toml = "0.9.5"
toml_edit = "0.23.4"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
rstest = "0.26.1"
clog = { path = ".", features = ["test-support"] }
insta = "1.45.0"
